tests/compile_fail/derive_topology_zero.stderr
error: topology values must all be > 0
 --> tests/compile_fail/derive_topology_zero.rs:4:6
  |
4 | enum TopoZeroFlag {}
  |      ^^^^^^^^^^^^
